# picf

./: .gitignore  CMakeLists.txt  README
data/: be.ppareit.picf.gschema.xml  picf.desktop
src/: picf.vala
